force-app/main/default/objects/Form_LCF_Outcome_Achievement_1__c/Form_LCF_Outcome_Achievement_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund Grant Management - Outcome Achievements - 1.0</description>
    <label>Form LCF Outcome Achievement 1.0</label>
    <nameField>
        <displayFormat>OUA-{000000}</displayFormat>
        <label>Outcome Achievement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCF Grant Outcome Achievements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>