force-app/main/default/objects/Form_LCF_Outcome_Achievement_1__c/fields/grant_achievement__c.field-meta.xml
<CustomField>
    <fullName>grant_achievement__c</fullName>
    <description>Parent grant achievement block</description>
    <inlineHelpText>Parent grant achievement block</inlineHelpText>
    <label>Form LCF Grant Achievement Block 1.0</label>
    <referenceTo>Form_LCF_Grant_Achievement_1__c</referenceTo>
    <relationshipLabel>Outcome Achievements</relationshipLabel>
    <relationshipName>outcome_achievements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>