force-app/main/default/objects/Form_LCF_Outcome_Achievement_1__c/fields/grant_outcome__c.field-meta.xml
<CustomField>
    <fullName>grant_outcome__c</fullName>
    <description>Parent grant outcome</description>
    <inlineHelpText>Parent grant outcome</inlineHelpText>
    <label>Form LCF Grant Outcome 1.0</label>
    <referenceTo>Form_LCF_Grant_Outcome_1__c</referenceTo>
    <relationshipLabel>Outcome Achievements</relationshipLabel>
    <relationshipName>outcome_achievements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>