force-app/main/default/objects/Form_LCF_Outcome_Achievement_1__c/fields/lcf_grant__c.field-meta.xml
<CustomField>
    <fullName>lcf_grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent LCF Grant</description>
    <inlineHelpText>Parent LCF Grant</inlineHelpText>
    <label>LCF Grant</label>
    <referenceTo>LCF_Grant__c</referenceTo>
    <relationshipLabel>Outcome Achievements</relationshipLabel>
    <relationshipName>outcome_achievements</relationshipName>
    <type>Lookup</type>
</CustomField>