force-app/main/default/objects/Form_LCF_Outcome_Achievement_1__c/fields/oa_claim_period__c.field-meta.xml
<CustomField>
    <fullName>oa_claim_period__c</fullName>
    <formula>RIGHT(TEXT(oa_period_start__c), 2)+"/"+MID(TEXT(oa_period_start__c), 6, 2)+"/"+LEFT(TEXT(oa_period_start__c), 4)
+ " TO " +
RIGHT(TEXT(oa_period_end__c), 2)+"/"+MID(TEXT(oa_period_end__c), 6, 2)+"/"+LEFT(TEXT(oa_period_end__c), 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Claim period</inlineHelpText>
    <label>OA - Claim Period</label>
    <type>Text</type>
</CustomField>