force-app/main/default/objects/Form_LCF_Outcome_Achievement_1__c/fields/oa_outcome__c.field-meta.xml
<CustomField>
    <fullName>oa_outcome__c</fullName>
    <formula>grant_outcome__r.ou_description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Outcome</inlineHelpText>
    <label>OA - Outcome</label>
    <type>Text</type>
</CustomField>