force-app/main/default/objects/Form_LCF_Outcome_Achievement_1__c/fields/oa_period_achievement__c.field-meta.xml
<CustomField>
    <fullName>oa_period_achievement__c</fullName>
    <inlineHelpText>How many participants achieved the outcome this period?</inlineHelpText>
    <label>OA - Period Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>