force-app/main/default/objects/Form_LCF_Outcome_Achievement_1__c/fields/oa_period_end__c.field-meta.xml
<CustomField>
    <fullName>oa_period_end__c</fullName>
    <formula>grant_achievement__r.ab_claim_period_end__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OA - Period End</label>
    <type>Date</type>
</CustomField>