force-app/main/default/objects/Form_LCF_Outcome_Achievement_1__c/fields/oa_period_lcf_claim__c.field-meta.xml
<CustomField>
    <fullName>oa_period_lcf_claim__c</fullName>
    <inlineHelpText>How much of this period&#39;s payment for the outcome is covered by this Life Chances Fund claim?</inlineHelpText>
    <label>OA - Period LCF Claim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>