force-app/main/default/objects/Form_LCF_Outcome_Achievement_1__c/fields/oa_period_outcome_payments__c.field-meta.xml
<CustomField>
    <fullName>oa_period_outcome_payments__c</fullName>
    <inlineHelpText>What is the total amount of outcomes payments associated with the outcome this period?</inlineHelpText>
    <label>OA - Period Outcome Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>