force-app/main/default/objects/Form_LCF_Outcome_Achievement_1__c/fields/oa_period_start__c.field-meta.xml
<CustomField>
    <fullName>oa_period_start__c</fullName>
    <description>Page Title:Claim period</description>
    <formula>grant_achievement__r.ab_claim_period_start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Start date</inlineHelpText>
    <label>OA - Period Start</label>
    <type>Date</type>
</CustomField>