force-app/main/default/objects/Form_LCF_Outcome_Achievement_1__c/fields/oa_period_target__c.field-meta.xml
<CustomField>
    <fullName>oa_period_target__c</fullName>
    <inlineHelpText>What was your target number of participants for the outcome this period?</inlineHelpText>
    <label>OA - Period Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>