force-app/main/default/objects/Form_LCF_Outcome_Achievement_1__c/fields/primary__c.field-meta.xml
<CustomField>
    <fullName>primary__c</fullName>
    <formula>grant_outcome__r.primary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>